--- a/CodeNameFive/Cell/RestaurantCustomerDetails/CollectCash/CollectCash.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/CollectCash/CollectCash.xib
@@ -17,48 +17,45 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CollectCash" customModule="CNF" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="315" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="315" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="case" translatesAutoresizingMaskIntoConstraints="NO" id="9y5-la-7qo">
-                        <rect key="frame" x="20" y="5" width="28" height="28"/>
+                        <rect key="frame" x="20" y="8" width="28" height="28"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="28" id="X5L-0g-8cH"/>
                             <constraint firstAttribute="height" constant="28" id="qIr-cw-fIH"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collect cash from the customer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HYD-la-oNx">
-                        <rect key="frame" x="53" y="5" width="168.5" height="28"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collect cash" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HYD-la-oNx">
+                        <rect key="frame" x="53" y="12.5" width="89" height="19"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rs. 2,000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4z7-kZ-ert">
-                        <rect key="frame" x="236.5" y="11" width="73.5" height="16"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                        <rect key="frame" x="204.5" y="12.5" width="90.5" height="19"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" name="secondaryColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="9y5-la-7qo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="0ho-IM-Bok"/>
-                    <constraint firstItem="HYD-la-oNx" firstAttribute="centerY" secondItem="9y5-la-7qo" secondAttribute="centerY" id="MZm-6s-lb0"/>
+                    <constraint firstItem="4z7-kZ-ert" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ImC-Va-320"/>
                     <constraint firstItem="9y5-la-7qo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="NGB-KV-UI2"/>
-                    <constraint firstAttribute="bottom" secondItem="HYD-la-oNx" secondAttribute="bottom" constant="5" id="Qv8-A8-jmG"/>
+                    <constraint firstItem="9y5-la-7qo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="a46-rt-eah"/>
                     <constraint firstItem="HYD-la-oNx" firstAttribute="leading" secondItem="9y5-la-7qo" secondAttribute="trailing" constant="5" id="c7B-d5-wZH"/>
-                    <constraint firstAttribute="trailing" secondItem="4z7-kZ-ert" secondAttribute="trailing" constant="10" id="kOK-0Y-0Gv"/>
-                    <constraint firstItem="4z7-kZ-ert" firstAttribute="centerY" secondItem="HYD-la-oNx" secondAttribute="centerY" id="o1e-9I-oGX"/>
-                    <constraint firstAttribute="bottom" secondItem="9y5-la-7qo" secondAttribute="bottom" constant="5" id="rZn-eY-cdF"/>
-                    <constraint firstItem="HYD-la-oNx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="vsB-0W-Xom"/>
+                    <constraint firstAttribute="trailing" secondItem="4z7-kZ-ert" secondAttribute="trailing" constant="20" id="kOK-0Y-0Gv"/>
+                    <constraint firstItem="HYD-la-oNx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zbv-jQ-KUh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="collectCash" destination="4z7-kZ-ert" id="2Ah-9z-lqL"/>
             </connections>
-            <point key="canvasLocation" x="-17.39130434782609" y="36.160714285714285"/>
+            <point key="canvasLocation" x="-89.130434782608702" y="38.169642857142854"/>
         </tableViewCell>
     </objects>
     <resources>
