--- a/CodeNameFive/Cell/RestaurantCustomerDetails/Detail/DetailsCell.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/Detail/DetailsCell.xib
@@ -16,31 +16,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="61" id="KGk-i7-Jjw" customClass="DetailsCell" customModule="CNF" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="329" height="61"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="291" id="KGk-i7-Jjw" customClass="DetailsCell" customModule="CNF" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="346" height="291"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="329" height="61"/>
+                <rect key="frame" x="0.0" y="0.0" width="346" height="291"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Soul Cafe" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vlD-7w-aY3">
-                        <rect key="frame" x="20" y="20" width="92.5" height="24"/>
+                        <rect key="frame" x="20" y="25" width="92.5" height="24"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ebh-XF-wbs">
-                        <rect key="frame" x="20" y="54" width="289" height="130.5"/>
+                        <rect key="frame" x="20" y="69" width="306" height="112"/>
                         <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" name="secondaryColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOd-UU-QQy">
-                        <rect key="frame" x="211" y="10" width="44" height="44"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="g7R-gD-Ri9">
+                        <rect key="frame" x="180" y="16" width="146" height="42"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDf-F9-Dlc">
-                                <rect key="frame" x="1" y="1" width="42" height="42"/>
+                                <rect key="frame" x="0.0" y="0.0" width="42" height="42"/>
+                                <color key="backgroundColor" name="Background"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="1BD-0l-oRH"/>
                                     <constraint firstAttribute="width" constant="42" id="jXN-HW-1k1"/>
@@ -51,44 +52,9 @@
                                     <action selector="callOnNumberButtonPressedWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="qhu-PS-aKW"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <color key="backgroundColor" name="bgIcons"/>
-                        <constraints>
-                            <constraint firstItem="RDf-F9-Dlc" firstAttribute="centerY" secondItem="hOd-UU-QQy" secondAttribute="centerY" id="Iop-OB-lbd"/>
-                            <constraint firstAttribute="width" constant="44" id="It3-O0-Yak"/>
-                            <constraint firstAttribute="height" constant="44" id="VvT-gX-OMd"/>
-                            <constraint firstItem="RDf-F9-Dlc" firstAttribute="centerX" secondItem="hOd-UU-QQy" secondAttribute="centerX" id="jsQ-nI-mHe"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Re5-Tr-CTa">
-                        <rect key="frame" x="265" y="10" width="44" height="44"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwC-Bl-lYw">
-                                <rect key="frame" x="1" y="1" width="42" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="42" id="RRt-Bf-Quy"/>
-                                    <constraint firstAttribute="width" constant="42" id="X9D-rp-i9O"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                <state key="normal" image="helpcenter"/>
-                                <connections>
-                                    <action selector="HelpWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MPl-83-tyd"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" name="bgIcons"/>
-                        <constraints>
-                            <constraint firstItem="RwC-Bl-lYw" firstAttribute="centerX" secondItem="Re5-Tr-CTa" secondAttribute="centerX" id="6oc-QM-IFp"/>
-                            <constraint firstAttribute="width" constant="44" id="bFv-hH-ODg"/>
-                            <constraint firstAttribute="height" constant="44" id="pHt-W8-g9I"/>
-                            <constraint firstItem="RwC-Bl-lYw" firstAttribute="centerY" secondItem="Re5-Tr-CTa" secondAttribute="centerY" id="xhA-6I-oey"/>
-                        </constraints>
-                    </view>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jgm-Dy-P8A">
-                        <rect key="frame" x="152.5" y="10" width="44" height="44"/>
-                        <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09t-8J-bs3">
-                                <rect key="frame" x="1" y="1" width="42" height="42"/>
+                                <rect key="frame" x="52" y="0.0" width="42" height="42"/>
+                                <color key="backgroundColor" name="Background"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="42" id="MWR-Cy-IRX"/>
                                     <constraint firstAttribute="height" constant="42" id="WeX-TP-zvm"/>
@@ -100,47 +66,49 @@
                                     <action selector="messageButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7yE-Vn-aBi"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwC-Bl-lYw">
+                                <rect key="frame" x="104" y="0.0" width="42" height="42"/>
+                                <color key="backgroundColor" name="Background"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="RRt-Bf-Quy"/>
+                                    <constraint firstAttribute="width" constant="42" id="X9D-rp-i9O"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <state key="normal" image="helpcenter"/>
+                                <connections>
+                                    <action selector="HelpWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MPl-83-tyd"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" name="bgIcons"/>
-                        <constraints>
-                            <constraint firstItem="09t-8J-bs3" firstAttribute="centerY" secondItem="Jgm-Dy-P8A" secondAttribute="centerY" id="Qwc-2O-dgA"/>
-                            <constraint firstItem="09t-8J-bs3" firstAttribute="centerX" secondItem="Jgm-Dy-P8A" secondAttribute="centerX" id="f4Z-iI-Eza"/>
-                            <constraint firstAttribute="width" constant="44" id="gSC-iy-X1B"/>
-                            <constraint firstAttribute="height" constant="44" id="sln-c0-Drj"/>
-                        </constraints>
-                    </view>
+                    </stackView>
                 </subviews>
                 <color key="backgroundColor" name="cellColor"/>
                 <constraints>
-                    <constraint firstItem="Re5-Tr-CTa" firstAttribute="leading" secondItem="hOd-UU-QQy" secondAttribute="trailing" constant="10" id="9az-mh-Js4"/>
+                    <constraint firstAttribute="trailing" secondItem="g7R-gD-Ri9" secondAttribute="trailing" constant="20" id="2TX-Mb-y6I"/>
                     <constraint firstAttribute="trailing" secondItem="Ebh-XF-wbs" secondAttribute="trailing" constant="20" id="Ct8-pC-gOy"/>
                     <constraint firstItem="vlD-7w-aY3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ESf-L5-YQh"/>
-                    <constraint firstItem="Re5-Tr-CTa" firstAttribute="centerY" secondItem="hOd-UU-QQy" secondAttribute="centerY" id="J2t-FG-8BF"/>
-                    <constraint firstAttribute="trailing" secondItem="Re5-Tr-CTa" secondAttribute="trailing" constant="20" id="Kfs-sX-ZIY"/>
-                    <constraint firstItem="Re5-Tr-CTa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NQh-Ym-yQ1"/>
-                    <constraint firstItem="Ebh-XF-wbs" firstAttribute="top" secondItem="vlD-7w-aY3" secondAttribute="bottom" constant="10" id="TWm-ZU-pOI"/>
-                    <constraint firstItem="Jgm-Dy-P8A" firstAttribute="centerY" secondItem="Re5-Tr-CTa" secondAttribute="centerY" id="U2O-A0-oiq"/>
-                    <constraint firstItem="hOd-UU-QQy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Uiv-4X-5dc"/>
-                    <constraint firstItem="Re5-Tr-CTa" firstAttribute="centerY" secondItem="vlD-7w-aY3" secondAttribute="centerY" id="VhU-UB-ROL"/>
-                    <constraint firstItem="Jgm-Dy-P8A" firstAttribute="top" secondItem="hOd-UU-QQy" secondAttribute="top" id="dbf-9J-deA"/>
+                    <constraint firstItem="g7R-gD-Ri9" firstAttribute="centerY" secondItem="vlD-7w-aY3" secondAttribute="centerY" id="H7B-ii-27F"/>
+                    <constraint firstItem="Ebh-XF-wbs" firstAttribute="top" secondItem="vlD-7w-aY3" secondAttribute="bottom" constant="20" id="TWm-ZU-pOI"/>
                     <constraint firstItem="Ebh-XF-wbs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ddb-GE-l5F"/>
-                    <constraint firstItem="Jgm-Dy-P8A" firstAttribute="leading" secondItem="vlD-7w-aY3" secondAttribute="trailing" constant="40" id="ra7-JL-4aw"/>
-                    <constraint firstItem="vlD-7w-aY3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="wQt-pc-xu5"/>
+                    <constraint firstItem="vlD-7w-aY3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="wQt-pc-xu5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="address" destination="Ebh-XF-wbs" id="Qmk-qn-XpZ"/>
-                <outlet property="messageView" destination="Jgm-Dy-P8A" id="ipl-Me-sIw"/>
+                <outlet property="businessName" destination="vlD-7w-aY3" id="k3R-yv-HsN"/>
+                <outlet property="help" destination="RwC-Bl-lYw" id="5jn-Bj-Tw3"/>
+                <outlet property="message" destination="09t-8J-bs3" id="gOb-zl-YEM"/>
+                <outlet property="phone" destination="RDf-F9-Dlc" id="ACd-vc-5Cn"/>
             </connections>
-            <point key="canvasLocation" x="9.4202898550724647" y="43.191964285714285"/>
+            <point key="canvasLocation" x="21.739130434782609" y="120.20089285714285"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="call" width="21" height="21"/>
         <image name="comment" width="24" height="24"/>
         <image name="helpcenter" width="22" height="22"/>
-        <namedColor name="bgIcons">
+        <namedColor name="Background">
             <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="cellColor">
